--- a/view/templates/mediatype-pl.html
+++ b/view/templates/mediatype-pl.html
@@ -1,23 +1,23 @@
 {% extends "page-pl.html" %}
 
-    {% block content %}
-        <div class="altview">
-            <h4>Alternates View</h4>
-            <p>Inne profil, formaty i języki:</p>
-            <p><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_view=alternates"><em>Profil na przemian</em> View</a></p>
-        </div>
-        <h1>{{ deets['label'] }}</h1>
-        <h3><a href="{{ request.values.get('uri') }}">{{ request.values.get('uri') }}</a></h3>
-        <h4>Źródło:</h4>
-        <ul>
-            <li><a href="https://www.iana.org/assignments/media-types/{{ mediatype }}">https://www.iana.org/assignments/media-types/{{ mediatype }}</a></li>
-        </ul>
-        {% if deets['contributors'] is not none %}
-        <h4>Współtwórcy:</h4>
-        <ul>
-        {% for contributor in deets['contributors'] %}
-            <li><a href="{{ contributor }}">{{ contributor }}</a></li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endblock %}
+  {% block content %}
+    <div class="altview">
+      <h4>Alternate Representations</h4>
+      <p>Inne profil, formaty i języki:</p>
+      <p><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_view=alternates"><em>Profil na przemian</em> View</a></p>
+    </div>
+    <h1>{{ deets['label'] }}</h1>
+    <h3><a href="{{ request.values.get('uri') }}">{{ request.values.get('uri') }}</a></h3>
+    <h4>Źródło:</h4>
+    <ul>
+      <li><a href="https://www.iana.org/assignments/media-types/{{ mediatype }}">https://www.iana.org/assignments/media-types/{{ mediatype }}</a></li>
+    </ul>
+    {% if deets['contributors'] is not none %}
+    <h4>Współtwórcy:</h4>
+    <ul>
+    {% for contributor in deets['contributors'] %}
+      <li><a href="{{ contributor }}">{{ contributor }}</a></li>
+    {% endfor %}
+    </ul>
+    {% endif %}
+  {% endblock %}
