--- a/view/templates/page_home_reg.html
+++ b/view/templates/page_home_reg.html
@@ -2,8 +2,8 @@
 
   {% block content %}
     <div class="altview">
-      <h4>Alternates View</h4>
-      <p>See this content according to other views and formats:</p>
+      <h4>Alternate Representations</h4>
+      <p>See this content according to other profiles/views and Media Type/formats:</p>
       <p><a href="{{ request.base_url }}?_view=alternates"><em>Alternates</em> View</a></p>
     </div>
 
@@ -14,5 +14,4 @@
       <li><a href="https://w3id.org/mediatype/">Register of Media Types</a></li>
       <li><a href="https://w3id.org/mediatype/agent/">Register of Agents</a></li>
     </ul>
-
   {% endblock %}
