--- a/view/templates/page.html
+++ b/view/templates/page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Media Types</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='simple.css') }}" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli" />
 </head>
 <body>
     <header>
