dataset view DCAT 2

--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -11,7 +11,7 @@
         <th>Formats</th>
         <th>Languages</th>
         <th>Description</th>
-        <th>Namespace</th>
+        <th>Profile URI</th>
       </tr>
     {% for token, vals in views.items() %}
       <tr>
